k8s/environments/staging/apps/web-user/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-user
  namespace: cinema
spec:
  selector:
    app.kubernetes.io/name: web-user
  ports:
    - name: http
      port: 80
      targetPort: http
